--- a/soa-pet-clinic-web/pom.xml
+++ b/soa-pet-clinic-web/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>soa-pet-clinic</artifactId>
         <groupId>com.shoshonearnold</groupId>
-        <version>0.0.2</version>
+        <version>0.0.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,7 +13,7 @@
         <dependency>
             <artifactId>soa-pet-clinic-data</artifactId>
             <groupId>com.shoshonearnold</groupId>
-            <version>0.0.2</version>
+            <version>0.0.3-SNAPSHOT</version>
         </dependency>
 
         <dependency>
